# car_demo

./: .gitignore
car_demo/: CMakeLists.txt  package.xml
car_demo/launch/: demo-light.launch
car_demo/nodes/: image_to_bird_eye_view.cpp  joystick_translator
car_demo/rviz/: demo-light.rviz
car_demo/worlds/: mcity-light.world
prius_description/urdf/: prius-light.urdf
